--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "symfony/validator": "^3.2 || ^4.0 || ^5.0" ,
         "symfony/twig-bundle": "^3.2 || ^4.0 || ^5.0",
         "symfony/security-bundle": "^3.2 || ^4.0 || ^5.0",
-        "twig/twig": "^2.0",
+        "twig/twig": "^2.0 || ^3.0",
         "symfony/orm-pack": "*",
         "specshaper/encrypt-bundle": "dev-master",
         "roromix/spreadsheetbundle": "dev-master"
